# ubs-transactions-csv-parser

./: pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
examples/: pyproject.toml  ubs-transactions-csv-parser.ipynb
src/tests/: test_parser.py
src/ubs_transactions_csv_parser/: __init__.py
