[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ubs-transactions-csv-parser"
version = "0.2.3"
description = "Parse and deduplicate UBS transaction CSV files."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Riccardo Torreggiani", email = "riccardo.torreggiani@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = ["pycountry>=23"]

[project.urls]
Homepage = "https://github.com/rito1998/ubs-transactions-csv-parser"

[dependency-groups]
dev = [
  "pytest>=8",
  "build>=1",
  "twine>=5",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ubs_transactions_csv_parser*"]

[tool.uv]
default-groups = ["dev"]
